converted to pwa

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3d62637f3e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="manifest" href="./manifest.json">
     <title>GADS2020 Weather App</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
     <div id="timezone-info" class="timezone">-</div>
     <div id="weather-icon" class="weather-img"><img src="icons/unknown.svg"></div>
     <div id="temperature-info" class="temperature">-°<span>C</span></div>
-    <div id="weather-description" class="description">description</div>    
+    <div id="weather-description" class="description">-</div>    
  </div>
 </section>
 
@@ -41,6 +42,6 @@
  </div>
 </footer> 
     
-<script src="app.js"></script>
+<script src="../app.js"></script>
 </body>
 </html>
