--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3d62637f3e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="manifest" href="./manifest.json">
     <title>GADS2020 Weather App</title>
 </head>
@@ -42,6 +42,6 @@
  </div>
 </footer> 
     
-<script src="../app.js"></script>
+<script src="./app.js"></script>
 </body>
 </html>
