--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3d62637f3e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="manifest" href="./manifest.json">
+    <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
     <title>GADS2020 Weather App</title>
 </head>
 <body>
 
 <!--Country/City Search-->
+<nav>
+<div>
+    <h2>SMASH IT</h2>
+    <a href="#">View Search</a>
+</div>
+</nav>
+
 <section>
  <div class="search-city">
      <div class="enter-search">
@@ -42,6 +49,6 @@
  </div>
 </footer> 
     
-<script src="./app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
