--- a/public/offline.html
+++ b/public/offline.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge" />
     <script src="https://kit.fontawesome.com/3d62637f3e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="manifest" href="/manifest.json">
     <!--IOS support-->
     <link rel="apple-touch-icon" href="/images/logo/cloud-72x72.png" />
-    <link rel="apple-touch-icon" href="/images/logo/cloud-128x128.png" />
-    <link rel="apple-touch-icon" href="/images/logo/cloud-256x256.png" />
-    <link rel="apple-touch-icon" href="/images/logo/cloud-512x512.png" />
+    <link rel="apple-touch-icon" href="/images/logo/cloud-96x96.png" />
     <meta name="apple-mobile-web-app-status-bar" content="#e5ecf4">
     <meta name="theme-color" content="#e5ecf4" />
     <!--Title-->
@@ -64,7 +62,7 @@
 <a href="/index.html">Go To Home Page</a>
 </div>
 
-<script src="/public/js/register.js"></script>
-<script src="/public/js/app.js"></script>
+<script src="/js/register.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
