--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge" />
-    <script src="https://kit.fontawesome.com/3d62637f3e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="manifest" href="/manifest.json">
     <!--IOS support-->
     <link rel="apple-touch-icon" href="/images/logo/cloud-72x72.png" />
@@ -46,7 +45,18 @@
 </section>
 
 
-<script src="/public/js/register.js"></script>
-<script src="/public/js/app.js"></script>
+ <!-- The core Firebase JS SDK is always required and must be listed first -->
+ <script src="/__/firebase/7.19.1/firebase-app.js"></script>
+
+ <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+ <script src="/__/firebase/7.19.1/firebase-analytics.js"></script>
+
+ <!-- Initialize Firebase -->
+ <script src="/__/firebase/init.js"></script>
+
+ 
+<script src="/js/register.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
